--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,25 @@
 .site-layout .site-layout-background {
   background: #fff;
 }
+
+@media (max-width: 320px) {
+  .hmsTitle {
+    font-size: 8px;
+  }
+}
+
+@media (min-width: 320px) {
+  .hmsTitle {
+    font-size: 10px;
+  }
+}
+@media (min-width: 425px) {
+  .hmsTitle {
+    font-size: 14px;
+  }
+}
+@media (min-width: 800px) {
+  .hmsTitle {
+    font-size: 16px;
+  }
+}
